# macsima-pipeline

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: batch_example.yaml  cemm.nextflow.config  default.yaml  mcmicro_params.yaml  signature_example.yaml
experiments/expr10/: config.yaml  roi_metadata.csv
experiments/expr34/: config.yaml
experiments/expr37/: config.yaml  roi_metadata.csv
experiments/lab_stary/expr35/: config.yaml  roi_metadata.csv
experiments/metpredict-dataset-2026-07-17/: config.yaml  expr34_roi_metadata.csv  expr37_roi_metadata.csv  expr38_roi_metadata.csv  signature.yaml
metadata/: Exp37_ROI_names.csv  Exp38_ROI_names.csv  Expr34_roi_metadata.csv
src/macsima_pipeline/: __init__.py  clean.py  cli.py  config.py  finalize.py  mcmicro.py  panel.py  preprocess.py  scaffold.py  slurm.py  staging.py  staging_core.py  utils.py
src/macsima_pipeline/lib/: __init__.py
src/macsima_pipeline/lib/astir/: NOTICE  __init__.py  data.py  model.py  recognition.py
src/macsima_pipeline/phenotype/: __init__.py  io.py  normalize.py  report.py  signature.py  spatial_qc.py  workers.py
src/macsima_pipeline/phenotype/engines/: __init__.py  _labeling.py  astir.py  base.py  flowsom.py  leiden.py  scyan.py
src/macsima_pipeline/viz/: __init__.py  cell_maps.py  channel_qc.py  io.py  render.py  workers.py
templates/: mcmicro.sbatch.j2  phenotype.sbatch.j2  planner.sbatch.j2  preprocess.sbatch.j2  staging.sbatch.j2  viz.sbatch.j2
tests/: test_astir_lib.py  test_batch.py  test_cli_all.py  test_config.py  test_panel.py  test_phenotype.py  test_phenotype_joint.py  test_preprocess_parallel.py  test_scaffold.py  test_staging_core.py  test_staging_discovery.py  test_viz_smoke.py
(+2 files in other folders)
