[project]
name = "macsima-pipeline"
version = "0.1.0"
description = "Reusable, config-driven pipeline for MACSIMA multiplexed imaging on SLURM."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Yimin Zheng" }]
keywords = ["macsima", "multiplexed-imaging", "mcmicro", "spatialdata", "slurm"]

dependencies = [
    "cyclopts>=3.0",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "jinja2>=3.1",
    "joblib>=1.4",
    "cellpose>=4.0.8",
    "dask-image>=2025.11.0",
    "imagecodecs>=2025.11.11",
    "scikit-image>=0.25.2",
    "sopa>=2.1.10",
    "spatialdata>=0.4.0",
    "spatialdata-plot>=0.2.13",
    "squidpy>=1.6.6",
    "tifffile>=2024.0",
    "anndata>=0.10",
    "pandas>=2.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "spatial-image>=1.1",
    "multiscale-spatial-image>=1.0",
    "rich>=13.7",
    "torch>=2.0",
    "torchvision>=0.15",
]

[project.scripts]
macsima-pipeline = "macsima_pipeline.cli:main"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.0",
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/macsima_pipeline"]

[tool.hatch.build.targets.sdist]
include = ["src/macsima_pipeline", "templates", "configs", "README.md"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true